# hoop-vision

./: .gitignore  LICENSE  README.md  ROADMAP.md  SPEC.md  calib_hudl_static2.json  pyproject.toml
.github/workflows/: ci.yml
app/: requirements.txt  streamlit_app.py
data/: README.md
data/labels/: pickup_seg1.csv  pickup_seg2.csv  pickup_seg3.csv
docs/: decisions.md  player_identity_nba.json  reference-analysis.md  registered_stats_nba.json
scratch_detector/: README.md  __init__.py  adapter.py  data.py  eval.py  loss.py  model.py  train.py
scripts/: anchor_court_template.py  auto_calibrate.py  benchmark.py  build_court_keypoints.py  build_nba_sample.py  calibrate.py  compare_court_template.py  convert_court_coco_to_yolo_pose.py  download_clips.py  download_data.py  eval_registration.py  eval_shots.py  eval_tracking.py  finetune_yolo.py  game_report.py  identify_players.py  inspect_jersey_datasets.py  label_tracks.py  player_stats.py  predict_court_pose.py  recover_court_template.py  register_court.py  registered_stats.py  track_diagnostics.py  train_court_pose.py  train_number_classifier.py  train_number_detector.py
src/hoopvision/: __init__.py  aggregate.py  court.py  court_template.py  detect.py  events.py  identify_pipeline.py  ingest.py  (+12 more)
tests/: conftest.py  test_aggregate.py  test_auto_calibrate.py  test_court.py  test_court_template.py  test_events.py  test_identity.py  test_keypoints.py  test_label_tracks.py  test_motion.py  test_registration.py  test_scratch_detector.py  test_segments.py  test_stats.py  test_stitch.py  test_teams.py  test_tracking.py
(+6 files in other folders)
