[project]
name = "hoopvision"
version = "0.1.0"
description = "Basketball video analytics: detection, tracking, court homography, shot charts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.10",
    "ultralytics>=8.4",
    # <0.30: sv.ByteTrack is deprecated and will be removed in 0.30; its
    # replacement (the `trackers` package) currently ships a broken wheel.
    "supervision>=0.29,<0.30",
    "streamlit>=1.40",
    "matplotlib>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hoopvision"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts", "scratch_detector"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
